# cloai-service

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cloaiservice.html  docker-compose.yaml  index.html  pyproject.toml  search.js
.github/workflows/: acr.yaml  dispatch.yaml  release.yaml
cloaiservice/: config.html  main.html  models.html  routes.html  services.html
cloaiservice/models/: clients.html  llm.html
cloaiservice/routes/: clients.html  health.html  llm.html
cloaiservice/services/: schemaconverter.html
src/cloaiservice/: __init__.py  config.py  main.py  schemaconverter.py
src/cloaiservice/models/: clients.py  llm.py
src/cloaiservice/routes/: clients.py  health.py  llm.py
src/cloaiservice/services/: schemaconverter.py
tests/: test_config.py  test_fibonacci.py  test_schemaconverter.py
