[tool.poetry]
name = "cloaiservice"
version = "0.1.0"
description = "A beautiful description."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "cloaiservice", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.118.0"
pydantic = "^2.11.9"
uvicorn = "^0.37.0"
cloai = "^1.1.0"
openai = "^1.109.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
ruff = "^0.9.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
