[tool.poetry]
name = "cloaiservice"
version = "0.1.0"
description = "A beautiful description."
authors = ["Florian Rupprecht <florian.rupprecht@childmind.org>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "cloaiservice", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"
cloai = "^1.1.0"
openai = "^1.107.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.4"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
